# Q_gym

./: LICENSE  Makefile  README.md  environment.yml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
q_gym/models/: rl_model.py  rl_model_test.py
