[metadata]
name = q_gym
version = 0.1.0
author = Alexandre Augusto Abreu Almeida
description = Reinforcement Learning models to run on the environments of the OpenAI Gym.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
max-line-length = 79
max-complexity = 10

[testenv]
deps = -rrequirements.txt
commands = pytest

[tool:pytest]
addopts = -p no:warnings